--- a/offroad/android/app/build.gradle
+++ b/offroad/android/app/build.gradle
@@ -81,9 +81,9 @@ project.ext.sentryCli = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
-if(System.getenv('SENTRY_SKIP_UPLOAD') != "1") {
-    apply from: "../../node_modules/@sentry/react-native/sentry.gradle"
-}
+/* if(System.getenv('SENTRY_SKIP_UPLOAD') != "1") {
+     apply from: "../../node_modules/@sentry/react-native/sentry.gradle"
+ } */
 
 /**
  * Set this to true to create two separate APKs instead of one:
