--- a/offroad/android/app/src/main/AndroidManifest.xml
+++ b/offroad/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
       android:allowBackup="true"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      android:extractNativeLibs="true">
       <activity
         android:name="ai.comma.plus.offroad.MainActivity"
         android:label="@string/app_name"
