--- a/offroad/android/gradle.properties
+++ b/offroad/android/gradle.properties
@@ -18,9 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
-# android.enableAapt2=false
+android.enableAapt2=false
 gradle.properties.jvmargs=-Xmx2048m
 android.useAndroidX=false
 android.enableJetifier=false
 org.gradle.jvmargs=-Xmx2048M
-org.gradle.java.home=/Library/Java/JavaVirtualMachines/openjdk-14.0.2.jdk/Contents/Home
