--- a/offroad/android/app/src/main/AndroidManifest.xml
+++ b/offroad/android/app/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
       android:allowBackup="true"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
-      android:theme="@style/AppTheme"
-      android:extractNativeLibs="true">
+      android:theme="@style/AppTheme">
       <activity
         android:name="ai.comma.plus.offroad.MainActivity"
         android:label="@string/app_name"
@@ -36,3 +35,7 @@
     </application>
 
 </manifest>
+
+      <!-- 
+application
+      android:extractNativeLibs="true" -->
