--- a/offroad/package.json
+++ b/offroad/package.json
@@ -37,9 +37,11 @@
     "react-native": "0.59.10",
     "react-native-linear-gradient": "^2.3.0",
     "react-native-network-info": "^3.0.0",
+    "react-native-numeric-input": "^1.8.3",
     "react-native-popup-dialog": "^0.10.44",
     "react-native-qrcode-svg": "^5.3.1",
     "react-native-svg": "9.6.4",
+    "react-native-vector-icons": "6.6.0",
     "react-navigation": "1.0.0-beta.21",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
